--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node app",
 		"dev": "nodemon app",
-		"seed": "node models/seeds/expenseTrackerSeeder.js",
+		"seed": "node models/seeds/categorySeeder.js && node models/seeds/recordSeeder.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
