--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"express": "^4.18.2",
 		"express-handlebars": "^6.0.6",
 		"express-session": "^1.17.1",
+		"jsonwebtoken": "^9.0.0",
 		"method-override": "^3.0.0",
 		"mongoose": "^5.9.7",
+		"nodemailer": "^6.9.1",
 		"passport": "^0.6.0",
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
