docs: .env.example file update

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK=
 JWT_SECRET=
+GOOGLE_SMTP_ADDRESS=
+GOOGLE_SMTP_PASSWORD=
+HOME_ADDRESS = 
