--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"method-override": "^3.0.0",
 		"mongoose": "^5.9.7",
 		"nodemailer": "^6.9.1",
+		"nodemon": "^2.0.21",
 		"passport": "^0.6.0",
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
@@ -29,5 +30,8 @@
 	},
 	"devDependencies": {
 		"dotenv": "^16.0.3"
+	},
+	"engines": {
+		"node": ">=18 <19"
 	}
 }
